2013-04-12  Araki Ken  <arakiken@users.sf.net>

	* fb/x_display.c: The region where input method window is opened
	  is always exposed in hiding it.

	* doc/en/README.fb, doc/ja/README.fb: Updated.

	* im_ibus.c: Framebuffer on Linux is supported.

2013-04-11  Araki Ken  <arakiken@users.sf.net>

	* im_ibus.c:
	  "hide-preedit-text" signal is processed.

	* im_ibus.c, ibus/Makefile.in, fb/x.h, fb/x_display.c, configure.in:
	  Framebuffer on NetBSD is supported.

	* im_scim_mod_if.c:
	  Minor fixes.

	* x_im.c: Compilation error is fixed.

2013-04-08  Araki Ken  <arakiken@users.sf.net>

	* man/mlterm.1, README.ja, etc/main, etc/main.ja, doc/en/PROTOCOL:
	  Updated.

	* x_screen.c, x_main_config.c, ml_vt100_parser.[ch], ml_term.h,
	  x_font_manager.[ch], x_screen_manager.c, gtk/vte.c, main_loop.c:
	  - "box_drawing_font" option is added.
	  - It is possible to change "not_use_unicode_font" and
	    "only_use_unicode_font" dynamically.

	* ml_char_encoding.c: ml_is_msb_set() is tuned up.

2013-04-06  Araki Ken  <arakiken@users.sf.net>

	* Makefile.in: install-fb target is added.

	* doc/en/README.fb, doc/ja/README.fb: Updated.

	* x_im.[ch], x_screen.c:
	  - IM_API_VERSION 0x08 => 0x09.
	  - get_display, get_font_man and get_color_man are removed from
	    x_im_event_listener_t and get_unicode_policy is added.
	  - ml_is_msb_set is removed from x_im_export_syms and
	    ml_convert_to_internal_ch is added.

	* im_ibus.c, im_kbd.c, im_m17nlib.c, im_scim_mod_if.c, im_uim.c,
	  x_im_candidate_screen.c:
	  - ml_convert_to_internal_ch() is used for preedit or candidate
	    characters.
	  - MKF_BIWIDTH or MKF_AWIDTH property of preedit or candidate
	    characters is always checked even if they are not ISO10646_UCS4_1.

	* ml_term.h, ml_vt100_parser.h:
	  ml_{term|vt100_parser}_get_unicode_policy() is added.

	* ml_vt100_parser.c: ml_convert_to_internal_ch() is added.

	* fb/x_display.c, x_event_source.c: The minimum interval of
	  autorepeating is changed from 50ms to 25ms.